Tests/fail/inlineControlStructure.php
<?php

if ( $x = 'foo' ) echo 'foo';
while ( true ) echo 'foo';

?>